--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   connectivity_plus: ^0.5.0
+  sliver_tools: ^0.1.10+1
+
 
 dev_dependencies:
   flutter_test:
